# E_FLASH_RADIOTHERAPY

./: .travis.yml  README.md  requirements.txt  unit_test.py
1000000_cerenkov_corrected/: Kinetic_E_crystal_0.csv  Kinetic_E_crystal_5.csv  Optic_4.csv  Optic_fiber1.csv  Optic_fiber2.csv  Optic_fiber6.csv  Optic_fiber8.csv  scoring_nt_crystalSD_edep_t0.csv  scoring_nt_crystalSD_edep_t5.csv
10000_correct_cerenkov_optfib/: Kinetic_E_crystal_1.csv  Kinetic_E_crystal_11.csv  Kinetic_E_crystal_6.csv  Kinetic_E_crystal_9.csv  Optic_fiber4.csv  scoring_nt_crystalSD_edep_t1.csv  scoring_nt_crystalSD_edep_t4.csv  scoring_nt_crystalSD_edep_t6.csv  scoring_nt_crystalSD_edep_t9.csv
200000_correct_cerenkov_optfib/: Kinetic_E_crystal_0.csv  Kinetic_E_crystal_1.csv  Kinetic_E_crystal_10.csv  Kinetic_E_crystal_11.csv  Kinetic_E_crystal_2.csv  Kinetic_E_crystal_4.csv  Kinetic_E_crystal_7.csv  Kinetic_E_crystal_8.csv  Kinetic_E_crystal_9.csv  Optic_10.csv  Optic_fiber1.csv  Optic_fiber10.csv  Optic_fiber11.csv  Optic_fiber2.csv  Optic_fiber4.csv  Optic_fiber7.csv  Optic_fiber8.csv  scoring_nt_crystalSD_edep_t0.csv  scoring_nt_crystalSD_edep_t2.csv  scoring_nt_crystalSD_edep_t3.csv  scoring_nt_crystalSD_edep_t6.csv  scoring_nt_crystalSD_edep_t8.csv
25000_correct_cerenkov_optfib/: Kinetic_E_crystal_0.csv  Kinetic_E_crystal_1.csv  Kinetic_E_crystal_10.csv  Kinetic_E_crystal_11.csv  Kinetic_E_crystal_3.csv  Kinetic_E_crystal_4.csv  Kinetic_E_crystal_7.csv  Optic_fiber1.csv  Optic_fiber10.csv  Optic_fiber3.csv  Optic_fiber4.csv  Optic_fiber5.csv  Optic_fiber7.csv  Optic_fiber9.csv  scoring_nt_crystalSD_edep_t0.csv  scoring_nt_crystalSD_edep_t1.csv  scoring_nt_crystalSD_edep_t10.csv  scoring_nt_crystalSD_edep_t11.csv  scoring_nt_crystalSD_edep_t4.csv  scoring_nt_crystalSD_edep_t6.csv
50000_correct_cerenkov_optfib/: Kinetic_E_crystal_2.csv  Kinetic_E_crystal_3.csv  Kinetic_E_crystal_4.csv  Kinetic_E_crystal_6.csv  Kinetic_E_crystal_9.csv  Optic_fiber0.csv  Optic_fiber10.csv  Optic_fiber11.csv  Optic_fiber2.csv  Optic_fiber3.csv  Optic_fiber6.csv  Optic_fiber8.csv  scoring_nt_crystalSD_edep_t2.csv  scoring_nt_crystalSD_edep_t6.csv  (+2 more)
FlashPet/: CMakeLists.txt  README  doiPET.cc  run.mac  vis.mac
FlashPet/include/: FlashDetectorConstruction.hh  FlashPrimaryGeneratorAction.hh  doiPETAnalysis.hh  doiPETGlobalParameters.hh  doiPETRun.hh  doiPETRunAction.hh
FlashPet/src/: FlashDetectorConstruction.cc  FlashPhysicsList.cc  FlashPrimaryGeneratorAction.cc  FlashStackingAction.cc  doiPETActionInitialization.cc  doiPETAnalysis.cc  doiPETEventAction.cc  doiPETRun.cc  doiPETRunAction.cc  doiPETSteppingAction.cc
(+4968 files in other folders)
